--- a/app/src/main/res/layout/leave_request_holder.xml
+++ b/app/src/main/res/layout/leave_request_holder.xml
@@ -91,6 +91,7 @@
         android:layout_height="25dp"
         android:layout_marginEnd="8dp"
         android:padding="3dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/days"
         app:layout_constraintEnd_toStartOf="@+id/delete"
         app:layout_constraintTop_toTopOf="@+id/days"
